fixed incand overflow

--- a/18/css/main.css
+++ b/18/css/main.css
@@ -1,6 +1,10 @@
+html{
+    overflow-x: hidden;
+}
+
 body{
+    overflow-x: hidden;
     margin: 0;
-    position: relative;
     font-family: 'Open Sans', sans-serif;
 }
 
